refactor(backend): better practice in responseApi, exception filter add